// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Loading Default 1`] = `
.c0 {
  color: #000;
  font-size: 4px;
  position: relative;
  margin: 0 auto;
  -webkit-transform: translateZ(0) translateY(-100%);
  -ms-transform: translateZ(0) translateY(-100%);
  transform: translateZ(0) translateY(-100%);
  text-indent: -9999em;
}

.c0,
.c0:before,
.c0:after {
  border-radius: 100%;
  width: 2.5em;
  height: 2.5em;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: iVfUMe 1.4s infinite ease-in-out;
  animation: iVfUMe 1.4s infinite ease-in-out;
}

.c0:before,
.c0:after {
  content: '';
  position: absolute;
  top: 0;
}

.c0:before {
  left: -3em;
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}

.c0:after {
  left: 3em;
  -webkit-animation-delay: 0.16s;
  animation-delay: 0.16s;
}

<div
  className="c0"
  style={
    Object {
      "fontSize": "10px",
    }
  }
  type="menu"
>
  Loading...
</div>
`;

exports[`Storyshots Loading With regular CSS 1`] = `
.c0 {
  color: #000;
  font-size: 4px;
  position: relative;
  margin: 0 auto;
  -webkit-transform: translateZ(0) translateY(-100%);
  -ms-transform: translateZ(0) translateY(-100%);
  transform: translateZ(0) translateY(-100%);
  text-indent: -9999em;
}

.c0,
.c0:before,
.c0:after {
  border-radius: 100%;
  width: 2.5em;
  height: 2.5em;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: iVfUMe 1.4s infinite ease-in-out;
  animation: iVfUMe 1.4s infinite ease-in-out;
}

.c0:before,
.c0:after {
  content: '';
  position: absolute;
  top: 0;
}

.c0:before {
  left: -3em;
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}

.c0:after {
  left: 3em;
  -webkit-animation-delay: 0.16s;
  animation-delay: 0.16s;
}

<div
  className="test-color c0"
  style={
    Object {
      "fontSize": "10px",
    }
  }
  type="menu"
>
  Loading...
</div>
`;

exports[`Storyshots Search Default 1`] = `
.c2 {
  background-color: transparent;
  width: 100%;
  border: none;
  overflow: hidden;
}

.c2:focus {
  outline: none;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
}

.c3 {
  z-index: 100;
  position: absolute;
  background-color: white;
  margin-top: 2px;
  overflow: hidden;
  top: 100%;
  left: 0;
  right: 0;
  box-shadow: 0px 1px 2px rgba(0,0,0,0.15);
  max-height: 0;
}

.c4 {
  padding: 5px 15px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4:hover,
.c4:focus {
  outline: none;
  background-color: rgba(0,0,0,0.1);
}

.c0 {
  padding: 2px 15px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 2px rgba(0,0,0,0.15);
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="c1"
  >
    <span>
      Search
    </span>
  </div>
  <input
    className="c2"
    onChange={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
    value=""
  />
  <div
    className="c3"
    onMouseLeave={[Function]}
    open={false}
    value=""
  >
    
    <div
      className="c4"
      data={
        Object {
          "id": 1,
          "title": "One",
        }
      }
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      selected={false}
    >
      One
    </div>
    <div
      className="c4"
      data={
        Object {
          "id": 2,
          "title": "Two",
        }
      }
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      selected={false}
    >
      Two
    </div>
  </div>
</div>
`;

exports[`Storyshots Search With github search 1`] = `
Array [
  <div
    style={
      Object {
        "marginBottom": 5,
      }
    }
  >
    Search a GitHub username
  </div>,
  .c2 {
  background-color: transparent;
  width: 100%;
  border: none;
  overflow: hidden;
}

.c2:focus {
  outline: none;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
}

.c3 {
  z-index: 100;
  position: absolute;
  background-color: white;
  margin-top: 2px;
  overflow: hidden;
  top: 100%;
  left: 0;
  right: 0;
  box-shadow: 0px 1px 2px rgba(0,0,0,0.15);
  max-height: 0;
}

.c0 {
  padding: 2px 15px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 2px rgba(0,0,0,0.15);
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c1"
    >
      <span>
        Search
      </span>
    </div>
    <input
      className="c2"
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
      value=""
    />
    <div
      className="c3"
      onMouseLeave={[Function]}
      open={undefined}
      value=""
    >
      
    </div>
  </div>,
]
`;
